--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       .loading {
         position: absolute;
         margin: auto;
+        top: 30px;
         left: calc(50% + 2px);
         transform: translateX(-50%);
         display: flex;
